# costrategy

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md
backend/: Cargo.toml
backend/migrations/: 202606090001_init.sql  202606100001_task_assignees.sql  202606150001_notification_jump_and_read.sql  202606150002_task_blocked_status.sql  202606230001_task_commented_notification.sql  202606300001_task_completed_overdue.sql  202606300002_task_subtasks.sql
backend/src/: app_state.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  routes.rs  storage.rs  swagger.rs  time.rs
backend/src/auth/: dingtalk_auth.rs  mod.rs  permissions.rs  session.rs
backend/src/dingtalk/: client.rs  mod.rs  scheduler.rs  sync.rs
backend/src/notifications/: mod.rs  repository.rs  scheduler.rs  service.rs
backend/src/projects/: mod.rs  repository.rs
backend/src/settings/: mod.rs  repository.rs
backend/src/tasks/: mod.rs  repository.rs
backend/src/users/: mod.rs  repository.rs
backend/tests/: attachment_routes.rs  auth_routes.rs  config_and_error.rs  dingtalk_auth.rs  dingtalk_http_client.rs  dingtalk_scheduler.rs  dingtalk_sync.rs  health.rs  logging.rs  notification_routes.rs  notifications.rs  permissions.rs  project_routes.rs  settings_routes.rs  sqlx_notification_repository.rs  sqlx_project_repository.rs  sqlx_settings_repository.rs  sqlx_task_repository.rs  sqlx_user_repository.rs  swagger_routes.rs  task_routes.rs  user_routes.rs
docker/: docker-entrypoint.sh  nginx.conf
frontend/: .env.example  index.html  package-lock.json  package.json  (+3 more)
(+94 files in other folders)
